# snaked

./: .gitignore  CMakeLists.txt  Makefile  README
include/: CMakeLists.txt  snake-game.h  snake-log.h  snake-proto.h  snake-section.h  snake-types.h  snake-util.h
lib/: CMakeLists.txt  snake-field.c  snake-game.c  snake-player.c  snake-proto.c  snake-section.c  snake-util.c
src/: CMakeLists.txt  field.c  field.h  game.h  main.c  player.c  snake-field.c  snake-field.h  snake-game.c  snake-game.h  snake-log.h  snake-player.c  snake-player.h  snake-proto.c  snake-proto.h  snake-section.c  snake-section.h  snake-server.c  snake-server.h  snake-types.h
